--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -19,6 +19,15 @@ html, body {
 	-ms-transform: translateY(-50%);
 }
 
+.wrapper-all-result {
+	background: green;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 2%;
+	left: 1%;
+}
+
 .logo {
 	/* Centralize the logo inside div class "logo" -> http://stackoverflow.com/a/402643 */
 	background: url('../img/stadistics.png') no-repeat center center;
@@ -31,6 +40,35 @@ html, body {
 	padding: 10px;
 	margin-bottom: 20px;
 	width: 500px; 
+}
+
+.quantity-input {
+	padding: 10px;
+	margin-bottom: 20px;
+	width: 80px; 
+}
+
+.tweets {
+	
+	border: 10px;
+	margin: 10px;
+}
+
+#loading-div {
+	display: inline;
+}
+
+.hide-load {
+	display: none;
+}
+
+.tweet-on-list {
+	width: 50%;
+	text-align: center;
+	margin-left: auto;
+  	margin-right: auto;
+	background: #ededed;
+	border: 1px dashed;
 }
 
 button {
