--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,11 +2,18 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--bg-page-color: #DBEBC0;
+	--bg-tweets-card: #523249;
+	--bg-button-submit: #815355;
+}
+
 html, body {
 	height: 100%;
 	min-height: 100%
 	position: relative;
   	margin: 0;
+  	background: var(--bg-page-color)
 }
 
 .wrapper-all {
@@ -48,10 +55,16 @@ html, body {
 	width: 80px; 
 }
 
+.graph-results {
+	float: left;
+}
+
 .tweets {
 	
 	border: 10px;
 	margin: 10px;
+	width: 50%;
+	float: right;
 }
 
 #loading-div {
@@ -67,11 +80,15 @@ html, body {
 	text-align: center;
 	margin-left: auto;
   	margin-right: auto;
-	background: #ededed;
+	background: var(--bg-tweets-card);
 	border: 1px dashed;
+	color: white;
+	padding: 10px;
 }
 
 button {
 	border: 0px;
-	padding: 10px 20px 10px 20px;
+	padding: 15px 25px 15px 25px;
+	background-color: var(--bg-button-submit);
+	color: white;
 }
