--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,13 +13,23 @@
 		<div class="buttons">
 			<button id="btn-search" onClick="searchFn()">Let's fun!</button>
 		</div>
-		<div>
+		
+		<div class="wrapper-results">
 			<div id="loading" class="loading hide-load">Loading...</div>
-			<div class='tweets'></div>
+			<div class="graph-results">
+				<span>RESULT PLOT</span>
+			</div>
+
+			<div class='tweets'>
+				
+			</div>
+			
 			<span id="content-time-ajax"></span>
+
 		</div>
 	</div>
 	<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 </body>
 </html>
