--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,29 +9,42 @@
 	<div id="wrapper" class="wrapper-all">
 		<!-- <div class="logo"></div> -->
 		<input id="search-input"   class="search-input"   placeholder="Search a topic"></input>
-		<input id="quantity-input" class="quantity-input" placeholder="Quantity" type="number" name="quantity" min="1" max="5" value=1>
+		<input id="quantity-input" class="quantity-input" placeholder="Quantity" type="number" name="quantity" min="1" max="1000" value=15>
 		<div class="buttons">
-			<button id="btn-search" onClick="searchFn()">Search topic</button>
+			<button id="btn-search" onClick="searchFn()">Search topic<i id="btn-search-icon" class="btn-search-icon"></i></button>
 		</div>
-		
-		<div class="wrapper-results">
-			<!-- <div id="loading" class="loading hide-load">Loading...</div> -->
-			<div class="graph-results">
-				<canvas id="bar-chart" class="bar-chart"></canvas>
-			</div>
-
-			<div class='tweets'>
-				<div id="loading-icon" class="hide-load">
-					<i class=""></i>
-					<span class="sr-only">Loading...</span>
+		<div id="wrapper-all-result" class="wrapper-all-results hidden">
+			<div class="wrapper-summary">
+				<div class="summary summary-pos">
+					<span>Positive</span><br>
+					<span id="summary-desc-pos"></span>
 				</div>
-				<div class='tweets-list'>
-					
+				<div class="summary summary-neg">
+					<span>Negative</span><br>
+					<span id="summary-desc-neg"></span>
+				</div>
+				<div class="summary summary-neu">
+					<span>Neutral</span><br>
+					<span id="summary-desc-neu"></span>
 				</div>
 			</div>
-			
-			<span id="content-time-ajax"></span>
+			<div class="wrapper-results">
+				<!-- <div id="loading" class="loading hide-load">Loading...</div> -->
+				<div class="graph-results">
+					<canvas id="bar-chart" class="bar-chart"></canvas>
+				</div>
 
+				<div class='tweets'>
+					<div id="loading-icon" class="hide-load">
+						<i class=""></i>
+						<span class="sr-only">Loading...</span>
+					</div>
+					<div class='tweets-list'>
+						
+					</div>
+				</div>
+				<span id="content-time-ajax"></span>
+			</div>
 		</div>
 	</div>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
